# deepsleuth

./: .gitignore  HANDOFF.md  README.md  install.bat  install.ps1  install.sh  pyproject.toml
.github/workflows/: release.yml
backend/: cli.py  requirements.txt
backend/app/: config.py  history_store.py  main.py  task_store.py
backend/app/routers/: download.py  history.py  metrics.py  status.py  upload.py
backend/app/schemas/: history.py  task.py
backend/detector/: artifact.py  extraction.py  face_detection.py  frequency.py  fusion.py  heatmap.py  pipeline.py  report.py  spatial_cnn.py  temporal.py  xception.py
backend/history/: index.json
docs/superpowers/specs/: 2025-07-19-installer-design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  style.css
frontend/src/api/: client.ts
frontend/src/components/: ConfidenceGraph.tsx  DisclaimerBanner.tsx  Footer.tsx  ReportPreview.tsx  Sidebar.tsx  Typewriter.tsx  VideoPlayer.tsx
frontend/src/pages/: About.tsx  History.tsx  Landing.tsx  Methodology.tsx  Processing.tsx  Results.tsx  Upload.tsx
scripts/: build_frontend.py  convert_onnx.py  diagnose_pipeline.py  evaluate.py  preprocess.py  score_distribution.py  train.py
