[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "deepsleuth"
version = "0.1.0"
description = "Deepfake detector — upload a video, get a heatmap overlay + report"
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["backend*"]

[project.scripts]
deepsleuth = "backend.cli:main"
