[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "deepsleuth"
version = "0.1.2"
description = "Deepfake detector — upload a video, get a heatmap overlay + report"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "opencv-python",
    "torch",
    "torchvision",
    "mediapipe",
    "protobuf>=5.28",
    "numpy",
    "reportlab",
    "python-multipart",
    "Pillow",
    "typer",
    "timm",
    "pydantic",
    "onnxruntime",
    "platformdirs",
    "requests",
    "rich",
]

[project.urls]
Homepage = "https://github.com/miiidev/deepsleuth"
Source = "https://github.com/miiidev/deepsleuth"

[tool.setuptools.packages.find]
include = ["backend*"]
exclude = ["backend.venv*"]

[tool.setuptools.package-data]
backend = ["app/static/**"]

[project.scripts]
deepsleuth = "backend.cli:main"
